--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "ng2-bootstrap": "^1.1.14",
     "rxjs": "^5.0.0-rc.1",
     "zone.js": "~0.6.17"
   },
