FSPA-4 #comment add possibiltiy to build modules for hybrid app

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
     "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
     "build": "npm run build:dev",
+    "build:hybrid:dev": "webpack --config config/webpack.hybrid.dev.js --progress --profile --content-base src/hybrid11",
     "ci": "npm run lint && npm test && npm run e2e",
     "clean:dist": "npm run rimraf -- dist",
     "clean:install": "npm set progress=false && npm install",
@@ -21,9 +22,6 @@
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "e2e": "npm run protractor",
-    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
-    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
-    "github-deploy": "npm run github-deploy:dev",
     "lint": "npm run tslint \"src/**/*.ts\"",
     "postversion": "git push && git push --tags",
     "prebuild:dev": "npm run clean:dist",
@@ -38,6 +36,7 @@
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
     "server:prod": "http-server dist --cors",
     "server": "npm run server:dev",
+    "server:hybrid:dev": "webpack-dev-server --config config/webpack.hybrid.dev.js --progress --profile --watch --content-base src/",
     "start:hmr": "npm run server:dev:hmr",
     "start": "npm run server:dev",
     "test": "karma start",
