--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
     "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
     "build": "npm run build:dev",
-    "build:hybrid:dev": "webpack --config config/webpack.hybrid.dev.js --progress --profile --content-base src/hybrid11",
+    "build:hybrid:dev": "webpack --config config/webpack.hybrid.dev.js --progress --profile",
     "ci": "npm run lint && npm test && npm run e2e",
     "clean:dist": "npm run rimraf -- dist",
     "clean:install": "npm set progress=false && npm install",
