--- a/package.json
+++ b/package.json
@@ -67,12 +67,15 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
+    "@types/socket.io": "^1.4.27",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "immutable": "^3.8.1",
     "ng2-bootstrap": "^1.1.14",
     "rxjs": "^5.0.0-rc.1",
+    "socket.io": "^1.5.1",
     "zone.js": "~0.6.17"
   },
   "devDependencies": {
