--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
   },
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "server"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
