--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
     "npm": ">=3"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js --progress",
-    "start": "node dist/server.js",
+    "build": "webpack --config webpack.config.js --progress --watch",
+    "start": "nodemon dist/server.js",
     "postinstall": "npm run build"
   },
   "dependencies": {
@@ -27,9 +27,12 @@
     "express": "~4.14.0",
     "mongoose": "~4.6.2",
     "raw-loader": "~0.5.1",
+    "redis": "^2.6.3",
     "rxjs": "5.0.0-beta.12",
     "serve-static": "~1.11.1",
     "socket.io": "~1.4.8",
+    "socket.io-emitter": "^1.0.0",
+    "socket.io-redis": "^1.1.1",
     "ts-helpers": "^1.1.1",
     "ts-loader": "~0.8.2",
     "typescript": "~2.0.3",
@@ -37,6 +40,7 @@
     "xmlhttprequest-ssl": "jussikinnula/node-XMLHttpRequest"
   },
   "devDependencies": {
+    "nodemon": "^1.11.0",
     "tslint": "~3.15.1"
   }
 }
