--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.21.0",
     "imports-loader": "^0.6.5",
+    "install": "^0.8.2",
     "istanbul-instrumenter-loader": "^1.0.0",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
@@ -107,10 +108,12 @@
     "karma-remap-coverage": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
+    "node-sass": "^3.10.1",
     "parse5": "^2.2.2",
     "protractor": "^4.0.9",
     "raw-loader": "0.5.1",
     "rimraf": "^2.5.2",
+    "sass-loader": "^4.0.2",
     "script-ext-html-webpack-plugin": "^1.3.2",
     "source-map-loader": "^0.1.5",
     "string-replace-loader": "1.0.5",
