--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
   "exclude": [
     "node_modules",
     "dist",
-    "server"
+    "server",
+    "libs"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
