--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
     "@types/socket.io": "^1.4.27",
+    "@types/socket.io-client": "^1.4.28",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
