--- a/package.json
+++ b/package.json
@@ -69,8 +69,6 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
-    "@types/socket.io": "^1.4.27",
-    "@types/socket.io-client": "^1.4.28",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
@@ -78,7 +76,7 @@
     "immutable": "^3.8.1",
     "ng2-bootstrap": "^1.1.14",
     "rxjs": "^5.0.0-rc.2",
-    "socket.io": "^1.5.1",
+    "socket.io-client": "^1.5.1",
     "zone.js": "~0.6.17"
   },
   "devDependencies": {
@@ -87,6 +85,7 @@
     "@types/node": "^6.0.38",
     "@types/protractor": "^1.5.20",
     "@types/selenium-webdriver": "2.44.29",
+    "@types/socket.io-client": "^1.4.28",
     "@types/source-map": "^0.1.27",
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.34",
