--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
+    "angular2-infinite-scroll": "^0.2.6",
     "assets-webpack-plugin": "^3.4.0",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
