--- a/package.json
+++ b/package.json
@@ -58,15 +58,16 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "@angular/common": "2.1.1",
-    "@angular/compiler": "2.1.1",
-    "@angular/core": "2.1.1",
-    "@angular/forms": "^2.1.1",
-    "@angular/http": "2.1.1",
-    "@angular/platform-browser": "2.1.1",
-    "@angular/platform-browser-dynamic": "2.1.1",
-    "@angular/platform-server": "2.1.1",
-    "@angular/router": "3.1.1",
+    "@angular/common": "2.2.0",
+    "@angular/compiler": "2.2.0",
+    "@angular/core": "2.2.0",
+    "@angular/forms": "^2.2.0",
+    "@angular/http": "2.2.0",
+    "@angular/platform-browser": "2.2.0",
+    "@angular/platform-browser-dynamic": "2.2.0",
+    "@angular/platform-server": "2.2.0",
+    "@angular/upgrade": "2.2.0",
+    "@angular/router": "3.2.0",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -93,7 +94,7 @@
     "@types/webpack": "^1.12.34",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^2.2.1",
-    "codelyzer": "~1.0.0-beta.2",
+    "codelyzer": "~1.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
@@ -128,7 +129,7 @@
     "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.2",
     "ts-node": "^1.3.0",
-    "tslint": "^4.0.0-dev.0",
+    "tslint": "^3.9.0",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.5.0",
     "typescript": "^2.0.6",
