--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/angular2-data-table"]
 	path = libs/angular2-data-table
-	url = https://volodymyrderecha@bitbucket.org/bridge18/web-spa-datatable.git
+	url = ./bridge18/web-spa-datatable.git
