--- a/package.json
+++ b/package.json
@@ -60,16 +60,16 @@
     "build:libs": "npm run build:datatable && npm install ./libs/angular2-data-table --force"
   },
   "dependencies": {
-    "@angular/common": "2.2.0",
-    "@angular/compiler": "2.2.0",
-    "@angular/core": "2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@angular/http": "2.2.0",
-    "@angular/platform-browser": "2.2.0",
-    "@angular/platform-browser-dynamic": "2.2.0",
-    "@angular/platform-server": "2.2.0",
-    "@angular/upgrade": "2.2.0",
-    "@angular/router": "3.2.0",
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "^2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@angular/upgrade": "2.2.1",
+    "@angular/router": "3.2.1",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -80,7 +80,7 @@
     "ie-shim": "^0.1.0",
     "immutable": "^3.8.1",
     "ng2-bootstrap": "^1.1.14",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "5.0.0-beta.12",
     "socket.io-client": "^1.5.1",
     "zone.js": "~0.6.17"
   },
