fix merge error

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "webdriver:update": "npm run webdriver-manager update",
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "webpack",
-    "build:datatable": "cd libs/angular2-data-table && npm i && npm run release",
+    "build:datatable": "cd libs/angular2-data-table && npm i && npm run package",
     "build:libs": "npm run build:datatable && npm install ./libs/angular2-data-table --force"
   },
   "dependencies": {
