--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.34",
     "angular2-template-loader": "^0.5.0",
+    "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "^2.2.1",
     "codelyzer": "~1.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
@@ -121,6 +122,7 @@
     "karma-webpack": "1.8.0",
     "node-sass": "^3.10.1",
     "parse5": "^2.2.2",
+    "postcss-loader": "^1.1.1",
     "protractor": "^4.0.9",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
@@ -145,7 +147,7 @@
     "webpack-merge": "^0.15.0"
   },
   "engines": {
-    "node": ">= 4.2.1",
+    "node": ">= 6.0.0",
     "npm": ">= 3"
   }
 }
