--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,4 +10,5 @@ pipelines:
     - step:
         script: # Modify the commands below to build your repository.
           - npm i
-          - npm run lint
+          - npm run build:prod
+          - npm ci
