--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,5 +12,5 @@ pipelines:
           - npm i
           - npm run ci
           - git submodule update
-          - nom run build:libs
+          - npm run build:libs
           - npm run build:prod
