--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,8 +9,9 @@ pipelines:
   default:
     - step:
         script: # Modify the commands below to build your repository.
+          - git remote set-url origin https://$USERNAME:$PASSWORD@bitbucket.org/bridge18/web-spa-datatable.git
+          - git submodule update --init
           - npm i
           - npm run ci
-          - git submodule update --init
           - npm run build:libs
           - npm run build:prod
