--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
   default:
     - step:
         script: # Modify the commands below to build your repository.
+          - echo $USERNAME
           - git remote set-url origin https://$USERNAME:$PASSWORD@bitbucket.org/bridge18/web-spa-datatable.git
           - git submodule update --init
           - npm i
