--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "e2e:live": "npm run e2e -- --elementExplorer",
     "e2e": "npm run protractor",
     "lint": "npm run tslint \"src/**/*.ts\"",
-    "lint:style": "sass-lint --verbose -q \"src/**/*.scss\"",
+    "lint:style": "sass-lint --verbose -q",
     "postversion": "git push && git push --tags",
     "prebuild:dev": "npm run clean:dist",
     "prebuild:prod": "npm run clean:dist",
