--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "@types/webpack": "^1.12.34",
     "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.3",
-    "awesome-typescript-loader": "^2.2.1",
+    "awesome-typescript-loader": "~2.2.4",
     "codelyzer": "~1.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^3.1.3",
@@ -139,7 +139,7 @@
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.5.0",
-    "typescript": "^2.0.6",
+    "typescript": "~2.0.8",
     "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "^1.6.1",
