--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -55,7 +55,7 @@ rules:
     - convention: hyphenatedlowercase
   indentation:
     - 2
-    - size: 'tab'
+    - size: 2
   leading-zero:
     - 1
     - include: false
