--- a/package.json
+++ b/package.json
@@ -61,16 +61,16 @@
     "build:libs": "npm run build:datatable && npm install ./libs/angular2-data-table --force"
   },
   "dependencies": {
-    "@angular/common": "~2.2.1",
-    "@angular/compiler": "~2.2.1",
-    "@angular/core": "~2.2.1",
-    "@angular/forms": "~2.2.1",
-    "@angular/http": "~2.2.1",
-    "@angular/platform-browser": "~2.2.1",
-    "@angular/platform-browser-dynamic": "~2.2.1",
-    "@angular/platform-server": "~2.2.1",
-    "@angular/router": "~3.2.1",
-    "@angular/upgrade": "~2.2.1",
+    "@angular/common": "~2.3.1",
+    "@angular/compiler": "~2.3.1",
+    "@angular/core": "~2.3.1",
+    "@angular/forms": "~2.3.1",
+    "@angular/http": "~2.3.1",
+    "@angular/platform-browser": "~2.3.1",
+    "@angular/platform-browser-dynamic": "~2.3.1",
+    "@angular/platform-server": "~2.3.1",
+    "@angular/router": "~3.3.1",
+    "@angular/upgrade": "~2.3.1",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -82,9 +82,9 @@
     "ie-shim": "^0.1.0",
     "immutable": "^3.8.1",
     "ng2-bootstrap": "^1.1.16",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.0-rc.4",
     "socket.io-client": "^1.5.1",
-    "zone.js": "~0.6.17"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.33",
@@ -99,7 +99,7 @@
     "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "~2.2.4",
-    "codelyzer": "~1.0.0-beta.4",
+    "codelyzer": "2.0.0-beta.2",
     "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
@@ -136,8 +136,8 @@
     "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.2",
     "ts-node": "^1.3.0",
-    "tslint": "^3.15.1",
-    "tslint-loader": "^2.1.3",
+    "tslint": "~4.0.0",
+    "tslint-loader": "~3.2.1",
     "typedoc": "^0.5.0",
     "typescript": "~2.0.8",
     "url-loader": "^0.5.7",
