--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
+    "@types/lodash": "^4.14.44",
     "angular2-infinite-scroll": "^0.2.6",
     "assets-webpack-plugin": "^3.4.0",
     "classnames": "^2.2.5",
@@ -81,6 +82,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "immutable": "^3.8.1",
+    "lodash": "^4.17.2",
     "ng2-bootstrap": "^1.1.16",
     "rxjs": "5.0.0-rc.4",
     "socket.io-client": "^1.5.1",
