--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,6 +7,7 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+        try_files $uri /index.html;
     }
 
     location /b18api/services {
