--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@types/source-map": "^0.1.27",
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.34",
+    "angular2-perfect-scrollbar": "^1.1.0",
     "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "~2.2.4",
