--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
     "log4js": "^1.0.1",
+    "multer": "^1.2.1",
     "raw-loader": "~0.5.1",
     "redis": "^2.6.3",
     "rxjs": "5.0.0-beta.12",
