--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "ie-shim": "^0.1.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.2",
+    "moment": "^2.17.1",
     "ng2-bootstrap": "~1.2.0",
     "rxjs": "^5.0.1",
     "socket.io-client": "^1.5.1",
