--- a/package.json
+++ b/package.json
@@ -86,6 +86,9 @@
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "ng2-bootstrap": "~1.2.0",
+    "ng2-redux": "^5.1.0",
+    "redux": "^3.6.0",
+    "reselect": "^2.5.4",
     "rxjs": "^5.0.1",
     "socket.io-client": "^1.5.1",
     "zone.js": "^0.7.2"
