--- a/server/package.json
+++ b/server/package.json
@@ -34,9 +34,9 @@
     "redis": "^2.6.3",
     "rxjs": "5.0.0-beta.12",
     "serve-static": "~1.11.1",
-    "socket.io": "^1.5.1",
-    "socket.io-emitter": "^1.0.0",
-    "socket.io-redis": "^1.1.1",
+    "socket.io": "1.5.1",
+    "socket.io-emitter": "1.0.0",
+    "socket.io-redis": "1.1.1",
     "ts-helpers": "^1.1.1",
     "ts-loader": "~0.8.2",
     "typescript": "~2.0.3",
