--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@angularclass/hmr-loader": "~3.0.2",
     "@types/lodash": "^4.14.44",
     "angular2-infinite-scroll": "^0.2.6",
+    "angular2-moment": "^1.1.0",
     "assets-webpack-plugin": "^3.4.0",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
