--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
-    "@types/lodash": "^4.14.44",
+    "@types/lodash": "^4.14.49",
     "angular2-infinite-scroll": "^0.2.6",
     "assets-webpack-plugin": "^3.4.0",
     "classnames": "^2.2.5",
@@ -108,14 +108,14 @@
     "angular2-perfect-scrollbar": "^1.1.0",
     "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.3",
-    "awesome-typescript-loader": "~2.2.4",
+    "awesome-typescript-loader": "~3.0.0-beta.18",
     "codelyzer": "2.0.0-beta.2",
     "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "~2.0.0-rc.2",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.21.0",
@@ -140,7 +140,7 @@
     "rimraf": "^2.5.2",
     "sass-lint": "^1.10.2",
     "sass-loader": "^4.0.2",
-    "script-ext-html-webpack-plugin": "^1.3.2",
+    "script-ext-html-webpack-plugin": "^1.5.0",
     "source-map-loader": "^0.1.5",
     "string-replace-loader": "1.0.5",
     "style-loader": "^0.13.1",
@@ -150,11 +150,11 @@
     "tslint": "~4.0.0",
     "tslint-loader": "~3.2.1",
     "typedoc": "^0.5.0",
-    "typescript": "~2.0.8",
+    "typescript": "~2.1.5",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.25",
+    "webpack": "2.2.0",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "2.1.0-beta.9",
+    "webpack-dev-server": "2.2.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^0.15.0"
   },
