--- a/package.json
+++ b/package.json
@@ -133,10 +133,10 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.8.0",
+    "karma-webpack": "2.0.2",
     "node-sass": "^3.10.1",
     "parse5": "^2.2.2",
-    "postcss-loader": "^1.1.1",
+    "postcss-loader": "~1.3.0",
     "protractor": "^4.0.9",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
