make run protractor tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,12 @@
       "dom",
       "es6"
     ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "types": [
-      "hammerjs",
       "jasmine",
       "node",
-      "protractor",
       "selenium-webdriver",
       "source-map",
       "uglify-js",
