--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:publicdev": "cross-env NODE_ENV=publicdev webpack --config config/webpack.js --progress --profile --bail",
     "build:prod": "cross-env NODE_ENV=production webpack --config config/webpack.js --progress --profile --bail",
     "build:qa": "cross-env NODE_ENV=qa webpack --config config/webpack.js --progress --profile --bail",
+    "build:e2e": "cross-env NODE_ENV=e2e webpack --config config/webpack.js --progress --profile --bail",
     "build:stage": "cross-env NODE_ENV=stage webpack --config config/webpack.js --progress --profile --bail",
     "build:demo:layout": "webpack --config layout/webpack.config.js  --progress --profile",
     "build": "npm run build:dev",
@@ -25,7 +26,7 @@
     "docker": "docker",
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "e2e:live": "npm run e2e -- --elementExplorer",
-    "e2e": "npm-run-all -p -r server:prod:ci protractor",
+    "e2e": "npm-run-all -p -r server:prod:e2e protractor",
     "lint": "npm run tslint \"src/**/*.ts\"",
     "lint:style": "sass-lint --verbose -q",
     "postversion": "git push && git push --tags",
@@ -40,8 +41,8 @@
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.js --progress --profile --watch --content-base src/",
     "server:demo:layout": "webpack-dev-server --config layout/webpack.config.js  --progress --profile --watch  --content-base layout/",
-    "server:prod": "http-server dist --cors",
-    "server:prod:ci": "http-server dist -p 3000 -c-1 --cors",
+    "server:prod": "live-server dist --port 3000 --cors --mount=/spa:dist",
+    "server:prod:e2e": "live-server dist --port 3000 --cors --mount=/spa:dist",
     "server": "npm run server:dev",
     "server:hybrid:dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.hybrid.js --progress --profile --watch --content-base src/",
     "start:hmr": "npm run server:dev:hmr",
