--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:demo:layout": "webpack --config layout/webpack.config.js  --progress --profile",
     "build": "npm run build:dev",
     "build:hybrid:dev": "cross-env NODE_ENV=development webpack --config config/webpack.hybrid.js --progress --profile",
-    "ci": "npm run lint && npm run lint:style",
+    "ci": "npm run lint && npm run lint:style && npm run test",
     "clean:dist": "npm run rimraf -- dist",
     "clean:install": "npm set progress=false && npm install",
     "clean:start": "npm start",
@@ -126,7 +126,7 @@
     "istanbul-instrumenter-loader": "^1.0.0",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
-    "karma": "^1.2.0",
+    "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
