--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "@types/webpack": "^1.12.34",
     "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.3",
-    "awesome-typescript-loader": "~3.0.0-beta.18",
+    "awesome-typescript-loader": "^3.0.6",
     "codelyzer": "2.0.0-beta.2",
     "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^3.1.3",
