--- a/package.json
+++ b/package.json
@@ -67,16 +67,16 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "~2.4.1",
-    "@angular/compiler": "~2.4.1",
-    "@angular/core": "~2.4.1",
-    "@angular/forms": "~2.4.1",
-    "@angular/http": "~2.4.1",
-    "@angular/platform-browser": "~2.4.1",
-    "@angular/platform-browser-dynamic": "~2.4.1",
-    "@angular/platform-server": "~2.4.1",
-    "@angular/router": "~3.4.1",
-    "@angular/upgrade": "~2.4.1",
+    "@angular/common": "~2.4.8",
+    "@angular/compiler": "~2.4.8",
+    "@angular/core": "~2.4.8",
+    "@angular/forms": "~2.4.8",
+    "@angular/http": "~2.4.8",
+    "@angular/platform-browser": "~2.4.8",
+    "@angular/platform-browser-dynamic": "~2.4.8",
+    "@angular/platform-server": "~2.4.8",
+    "@angular/router": "~3.4.8",
+    "@angular/upgrade": "~2.4.8",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -101,7 +101,7 @@
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.4.1",
+    "@types/jasmine": "~2.5.2",
     "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "~2.53.39",
     "@types/socket.io-client": "^1.4.28",
@@ -140,7 +140,7 @@
     "npm-run-all": "^4.0.1",
     "parse5": "^2.2.2",
     "postcss-loader": "~1.3.0",
-    "protractor": "~4.0.14",
+    "protractor": "~5.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "sass-lint": "^1.10.2",
