fix protractor test run

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.js --progress --profile --watch --content-base src/",
     "server:demo:layout": "webpack-dev-server --config layout/webpack.config.js  --progress --profile --watch  --content-base layout/",
-    "server:prod": "live-server dist --port 3000 --cors --mount=/spa:dist",
-    "server:prod:e2e": "live-server dist --port 3000 --cors --mount=/spa:dist",
+    "server:prod": "live-server dist --port=3000 --cors --mount=/spa:dist",
+    "server:prod:e2e": "live-server --port=3000 --no-browser --host=localhost --cors --mount=/spa:dist",
     "server": "npm run server:dev",
     "server:hybrid:dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.hybrid.js --progress --profile --watch --content-base src/",
     "start:hmr": "npm run server:dev:hmr",
