--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "immutable": "^3.8.1",
-    "intl": "^1.2.5",
+    "intl": "1.2.4",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "ng2-bootstrap": "~1.2.0",
