--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "typescript": "~2.1.6",
     "typings": "^2.1.0",
     "url-loader": "^0.5.7",
+    "vrsource-tslint-rules": "^4.0.1",
     "webpack": "2.2.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "2.2.0",
