--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "angular2-infinite-scroll": "^0.3.1",
     "angular2-perfect-scrollbar": "^2.0.6",
     "assets-webpack-plugin": "^3.4.0",
+    "class-transformer": "^0.1.6",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
