--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "webpack",
     "build:datatable": "cd libs/angular2-data-table && npm i && npm run package",
-    "build:libs": " ",
-    "postinstall": "typings install"
+    "build:libs": " "
   },
   "dependencies": {
     "@angular/common": "~2.4.8",
@@ -99,7 +98,6 @@
     "reselect": "^2.5.4",
     "rxjs": "^5.0.1",
     "socket.io-client": "^1.5.1",
-    "typedjson-npm": "^0.1.6",
     "zone.js": "^0.7.7"
   },
   "devDependencies": {
