--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
-    "@types/lodash": "^4.14.49",
+    "@types/lodash": "4.14.49",
     "angular2-infinite-scroll": "^0.3.1",
     "angular2-perfect-scrollbar": "^2.0.6",
     "assets-webpack-plugin": "^3.4.0",
