--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "build:libs": " "
   },
   "dependencies": {
+    "@angular-redux/store": "^6.0.1",
     "@angular/common": "~2.4.9",
     "@angular/compiler": "~2.4.9",
     "@angular/core": "~2.4.9",
@@ -93,7 +94,6 @@
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "ng2-bootstrap": "~1.2.0",
-    "ng2-redux": "^5.1.0",
     "redux": "^3.6.0",
     "reselect": "^2.5.4",
     "rxjs": "^5.0.1",
