--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "postcss-loader": "~1.3.0",
     "protractor": "~5.1.1",
     "raw-loader": "^0.5.1",
+    "redux-immutable-state-invariant": "^2.0.0",
     "rimraf": "^2.5.2",
     "sass-lint": "^1.10.2",
     "sass-loader": "^4.0.2",
