--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "ng2-bootstrap": "~1.2.0",
+    "normalizr": "^3.2.2",
     "redux": "^3.6.0",
     "reselect": "^2.5.4",
     "rxjs": "^5.0.1",
@@ -121,6 +122,7 @@
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.21.0",
+    "immutable-path": "git+https://git@github.com/baptistemanson/immutable-path.git",
     "imports-loader": "^0.6.5",
     "install": "^0.8.2",
     "istanbul-instrumenter-loader": "^1.0.0",
