--- a/package.json
+++ b/package.json
@@ -67,22 +67,23 @@
   },
   "dependencies": {
     "@angular-redux/store": "^6.0.1",
-    "@angular/common": "~2.4.9",
-    "@angular/compiler": "~2.4.9",
-    "@angular/core": "~2.4.9",
-    "@angular/forms": "~2.4.9",
-    "@angular/http": "~2.4.9",
-    "@angular/platform-browser": "~2.4.9",
-    "@angular/platform-browser-dynamic": "~2.4.9",
-    "@angular/platform-server": "~2.4.9",
-    "@angular/router": "~3.4.9",
-    "@angular/upgrade": "~2.4.9",
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/platform-server": "~4.0.0",
+    "@angular/router": "~4.0.0",
+    "@angular/upgrade": "~4.0.0",
+    "@angular/animations": "~4.0.0",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
     "@types/lodash": "4.14.49",
-    "angular2-infinite-scroll": "^0.3.1",
-    "angular2-perfect-scrollbar": "^2.0.6",
+    "ngx-infinite-scroll": "^0.4.1",
+    "ngx-perfect-scrollbar": "^4.0.0",
     "assets-webpack-plugin": "^3.4.0",
     "class-transformer": "^0.1.6",
     "classnames": "^2.2.5",
@@ -93,13 +94,13 @@
     "intl": "1.2.4",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
-    "ng2-bootstrap": "~1.2.0",
+    "ngx-bootstrap": "~1.6.3",
     "normalizr": "^3.2.2",
     "redux": "^3.6.0",
     "reselect": "^2.5.4",
     "rxjs": "^5.0.1",
     "socket.io-client": "^1.5.1",
-    "zone.js": "^0.7.7"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.45",
@@ -112,8 +113,8 @@
     "@types/webpack": "^1.12.34",
     "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.3",
-    "awesome-typescript-loader": "^3.0.6",
-    "codelyzer": "2.0.0-beta.2",
+    "awesome-typescript-loader": "^3.1.2",
+    "codelyzer": "~2.1.1",
     "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
