fix prod mode version crash

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
-    "@types/lodash": "4.14.49",
+    "@types/lodash": "~4.14.59",
     "ngx-infinite-scroll": "^0.4.1",
     "ngx-perfect-scrollbar": "^4.0.0",
     "assets-webpack-plugin": "^3.4.0",
@@ -111,6 +111,7 @@
     "@types/source-map": "^0.1.27",
     "@types/uglify-js": "^2.0.27",
     "@types/webpack": "^1.12.34",
+    "@types/core-js": "~0.9.39",
     "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "^3.1.2",
@@ -150,7 +151,7 @@
     "sass-lint": "^1.10.2",
     "sass-loader": "^4.0.2",
     "script-ext-html-webpack-plugin": "^1.5.0",
-    "source-map-loader": "^0.1.5",
+    "source-map-loader": "^0.2.1",
     "string-replace-loader": "1.0.5",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
@@ -159,13 +160,13 @@
     "tslint": "~4.0.0",
     "tslint-loader": "~3.2.1",
     "typedoc": "^0.5.3",
-    "typescript": "~2.1.6",
+    "typescript": "~2.2.2",
     "typings": "^2.1.0",
     "url-loader": "^0.5.7",
     "vrsource-tslint-rules": "^4.0.1",
-    "webpack": "2.2.0",
+    "webpack": "2.3.3",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "2.2.0",
+    "webpack-dev-server": "~2.4.2",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^0.15.0"
   },
