--- a/package.json
+++ b/package.json
@@ -67,17 +67,16 @@
   },
   "dependencies": {
     "@angular-redux/store": "^6.0.1",
-    "@angular/animations": "~4.0.0",
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/platform-server": "~4.0.0",
-    "@angular/router": "~4.0.0",
-    "@angular/upgrade": "~4.0.0",
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/forms": "~2.4.0",
+    "@angular/http": "~2.4.0",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic":"~2.4.0",
+    "@angular/platform-server":"~2.4.0",
+    "@angular/router": "~3.4.0",
+    "@angular/upgrade": "~2.4.0",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -100,7 +99,7 @@
     "reselect": "^2.5.4",
     "rxjs": "^5.0.1",
     "socket.io-client": "^1.5.1",
-    "zone.js": "^0.8.5"
+    "zone.js": "~0.7.0"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.45",
